[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "wheel"]

[project]
authors = [{name = "Anthony Lukach", email = "anthonylukach@gmail.com"}]
dependencies = [
  "click",
  "inquirer",
  "boto3",
]
description = "A collection of CLI utils for helping with AWS tasks"
license = {text = "MIT License"}
name = "awsalot"
version = "0.0.1"

[project.scripts]
aws-ecs-eds-sg-conn = "awsalot.ecs_rds_sg_connector:main"
aws-secret-to-pgconn = "awsalot.secret_to_pgconn:main"
