[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "wheel"]

[project]
authors = [{name = "Anthony Lukach", email = "anthonylukach@gmail.com"}]
dependencies = [
  "click",
  "inquirer",
  "boto3",
]
description = "A collection of CLI utils for helping with AWS tasks"
license = {text = "MIT License"}
name = "awsalot"
readme = "README.md"
version = "0.0.5"

[project.scripts]
awsalot = "awsalot:cli"
